# avto-xujim-feruz-aka

./: .env.example  .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: api.rs  main.rs  models.rs  scanner.rs  smmmain.rs  store.rs  telegram.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  theme.ts
